# Odoo-TransitOps

backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: vehicles.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: database.py  init_db.py
backend/app/models/: user.py
backend/app/services/: driver_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx  SearchInput.tsx
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  Drivers.tsx  Fleet.tsx  FuelExpenses.tsx  Login.tsx  Maintenance.tsx  Settings.tsx  Trips.tsx  UserManagement.tsx
frontend/src/stores/: authStore.ts
