[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "alembic>=1.18.4",
    "passlib>=1.7.4",
    "bcrypt>=4.2.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.12",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.39",
    "python-jose>=3.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "aiosqlite>=0.20.0",
]
